<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:animateLayoutChanges="true"
        android:clipToPadding="false"
        android:paddingTop="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="148dp"
        android:elevation="10dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_newsCardTime"
            android:layout_alignBottom="@+id/tv_newsCardTime"
            android:layout_alignParentStart="false"
            android:ems="9"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/demo_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_newsCardTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textSize="10sp"
            tools:ignore="RelativeOverlap"
            tools:text="@string/demo_tag" />

        <TextView
            android:id="@+id/tv_newsCardTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_newsCardTag"
            android:text="@string/demo_time"
            android:textSize="8sp" />

        <ImageView
            android:id="@+id/imbtn_fav"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_newsCardTime"
            android:background="@null"
            android:paddingTop="6dp"
            android:tint="@color/colorAccent" />
    </RelativeLayout>

        <ImageView
            android:id="@+id/imv_cardImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/no_image"
            tools:ignore="ContentDescription" />

    </android.support.v7.widget.CardView>

</LinearLayout>